# dreamcontext

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEP-DIVE.md  LICENSE  MANUAL-TEST-CHECKLIST.md  NOTICE  README.md  TRADEMARK.md  install.sh  package-lock.json  package.json  playwright.config.ts  tsup.config.ts  vitest.config.ts
.codex/: config.toml
.codex/agents/: council-persona.toml  council-synthesizer.toml  discover-brand.toml  dreamcontext-explore.toml  dreamcontext-initializer.toml  goal-implementer.toml  goal-plan-reviewer.toml  goal-planner.toml  goal-validator.toml  review-cloud-functions.toml  review-edge-cases.toml  review-frontend.toml  review-router.toml  review-security.toml  reviewer.toml  sleep-changelog.toml  sleep-core.toml  sleep-features.toml  sleep-state.toml  (+3 more)
.design-sync/: NOTES.md  config.json  conventions.md
agents/: agentcontext-explore.md  agentcontext-rem-sleep.md  curator-auditor.md  curator-verifier.md  curator-worker.md  dreamcontext-explore.md  dreamcontext-initializer.md  dreamcontext-rem-sleep.md  initializer-ingestor.md  initializer-scout.md  initializer-verifier.md  sleep-changelog.md  sleep-core.md  sleep-federation.md  sleep-knowledge.md  sleep-learn.md  sleep-migration.md  sleep-product.md  sleep-state.md  sleep-tasks.md
boards/: Issue9-Improvement-Graphic.excalidraw.md  Issue9-Sleep-Quality.excalidraw.md  PrePublish-Test-Case-Map.excalidraw.md
dashboard/: _ds_entry.tsx  _ds_fonts.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/frontend-placeholder/: index.html
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
diagrams/: reflection-concept.excalidraw.md
docs/: PRE-PUBLISH-TEST-PLAN.md  clickup.md  issue-9-sleep-plan.md  issue-9-validation.md  remote-task-setup.md
e2e/: alignment.spec.ts  control-panel.spec.ts  knowledge-fullscreen.spec.ts  shot.mjs
eval/: BASELINE.md  RESULTS.md  gold-heldout.jsonl  gold.jsonl  gold.smoke.jsonl  harness.ts
hooks/: marketing-binary-guard.sh
scripts/: dedup-calibrate.ts  embed-ab.ts  feature-upkeep-evidence.ts  generate-banner.mjs  recall-ab.ts  recall-diag.ts  smoke-theses.mjs
skill/: SKILL.md
skill-announcements/: SKILL.md
skill-curator/: SKILL.md
skill-deep-research/: SKILL.md
skill-initializer/: SKILL.md
skill-packs/: catalog.json
skill-patterns/: SKILL.md
skill-sync/: SKILL.md
skill-task-agent/: SKILL.md
skill-task-manager/: SKILL.md
(+1454 files in other folders)
