[package]
name = "dreamcontext-desktop"
version = "0.12.0"
edition = "2021"

[lib]
name = "dreamcontext_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dreamcontext-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
# Converts the Sleepy notch window into a non-activating NSPanel so the hotkey
# summons it OVER whatever app is focused — the user types into it without their
# current app deactivating, and dismissing it never surfaces the dreamcontext
# main window. Standard tool for macOS notch/Spotlight-style panels in Tauri 2.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Group-signal the dashboard-server child (SIGTERM→SIGKILL) on app exit so the
# whole process group is reaped, not just the direct node process. Already present
# transitively via tauri; pinned here so the direct use is explicit.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
